initial html template

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<h1>Test</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>CV - Michael Kohler</title>
+    <meta name="description" content="Michael Kohler's CV">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
+    <link rel="stylesheet" href="styles/lib/pure_min_0.5.0.css">
+    <!--[if lte IE 8]>
+    <link rel="stylesheet" href="styles/lib/pure_grids_responsive_old_ie_min_0.5.0.css">
+    <![endif]-->
+    <!--[if gt IE 8]><!-->
+    <link rel="stylesheet" href="styles/lib/pure_grids_responsive_min_0.5.0.css">
+    <!--<![endif]-->
+    <link rel="stylesheet" href="styles/main.css">
+</head>
+<body>
+    <div id="container">
+        <h1>Test</h1>
+        <button id="testbutton" class="pure-button pure-button-primary">Button!</button>
+    </div>
+
+<script src="scripts/main.js"></script>
+
+</body>
+</html>
