--- a/index.html
+++ b/index.html
@@ -18,8 +18,32 @@
 </head>
 <body>
     <div id="container">
-        <h1>Test</h1>
-        <button id="testbutton" class="pure-button pure-button-primary">Button!</button>
+        <nav>
+            Navigation....
+        </nav>
+        <section id="js-warning">
+            <h4>Warning!</h4>
+            <p>JS is not enabled...</p>
+        </section>
+        <section id="sec-general" class="content">
+            <h2>General</h2>
+            <button id="testbutton" class="pure-button pure-button-primary">Button!</button>
+        </section>
+        <section id="sec-jobs-education" class="content">
+            <h2>Jobs &amp; Education ....</h2>
+        </section>
+        <section id="sec-skills-projects" class="content">
+            <h2>Skills &amp; Projects ....</h2>
+        </section>
+        <section id="sec-facts" class="content">
+            <h2>Facts....</h2>
+        </section>
+        <section id="sec-other" class="content">
+            <h2>Other...</h2>
+        </section>
+        <footer>
+            &copy; 2014 Michael Kohler
+        </footer>
     </div>
 
 <script src="scripts/main.js"></script>
