download section added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         </section>
         <section id="sec-general" class="content">
             <h2>General</h2>
-            <button id="testbutton" class="pure-button pure-button-primary">Button!</button>
         </section>
         <section id="sec-jobs-education" class="content">
             <h2>Jobs &amp; Education ....</h2>
@@ -39,7 +38,9 @@
             <h2>Facts....</h2>
         </section>
         <section id="sec-other" class="content">
-            <h2>Other...</h2>
+            <h2>Documents</h2>
+            <p>Please feel free to download the relevant documents (diplomas, letter of references, ...). This .zip file is password-protected, you can get the password using one of the contact methods mentioned above.</p>
+            <button id="download-documents-button" class="pure-button pure-button-primary">Get documents</button>
         </section>
         <footer>
             &copy; 2014 Michael Kohler
