move to app directory and use gulp to serve files

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Michael Kohler's CV">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
+    <link rel="stylesheet" href="../node_modules/normalize.css/normalize.css">
     <link rel="stylesheet" href="styles/lib/pure_min_0.5.0.css">
     <!--[if lte IE 8]>
     <link rel="stylesheet" href="styles/lib/pure_grids_responsive_old_ie_min_0.5.0.css">
