restart from scratch

--- a/app/index.html
+++ b/app/index.html
@@ -7,45 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="../node_modules/normalize.css/normalize.css">
-    <link rel="stylesheet" href="styles/lib/pure_min_0.5.0.css">
-    <!--[if lte IE 8]>
-    <link rel="stylesheet" href="styles/lib/pure_grids_responsive_old_ie_min_0.5.0.css">
-    <![endif]-->
-    <!--[if gt IE 8]><!-->
-    <link rel="stylesheet" href="styles/lib/pure_grids_responsive_min_0.5.0.css">
-    <!--<![endif]-->
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <div id="container">
-        <nav>
-            Navigation....
-        </nav>
-        <section id="js-warning">
-            <h4>Warning!</h4>
-            <p>JS is not enabled...</p>
-        </section>
-        <section id="sec-general" class="content">
-            <h2>General</h2>
-        </section>
-        <section id="sec-jobs-education" class="content">
-            <h2>Jobs &amp; Education ....</h2>
-        </section>
-        <section id="sec-skills-projects" class="content">
-            <h2>Skills &amp; Projects ....</h2>
-        </section>
-        <section id="sec-facts" class="content">
-            <h2>Facts....</h2>
-        </section>
-        <section id="sec-other" class="content">
-            <h2>Documents</h2>
-            <p>Please feel free to download the relevant documents (diplomas, letter of references, ...). This .zip file is password-protected, you can get the password using one of the contact methods mentioned above.</p>
-            <button id="download-documents-button" class="pure-button pure-button-primary">Get documents</button>
-        </section>
-        <footer>
-            &copy; 2014 Michael Kohler
-        </footer>
-    </div>
+    Test
 
 <script src="scripts/main.js"></script>
 
