--- a/app/index.html
+++ b/app/index.html
@@ -6,13 +6,34 @@
     <meta name="description" content="Michael Kohler's CV">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="../node_modules/normalize.css/normalize.css">
+    <link rel="stylesheet" href="styles/lib/normalize.css">
+    <link rel="stylesheet" href="styles/lib/foundation.min.css">
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    Test
+<nav class="top-bar" data-topbar role="navigation">
+    <ul class="title-area">
+        <li class="name">
+            <h1><a href="#">mkohler.codes</a></h1>
+        </li>
+    </ul>
 
-<script src="scripts/main.js"></script>
+    <section class="top-bar-section">
+        <ul class="right">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">Erfahrung</a></li>
+            <li><a href="#">Ausbildung</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">Projekte</a></li>
+            <li><a href="#">Passion</a></li>
+            <li><a href="#">Referenzen</a></li>
+            <li><a href="#">Kontakt</a></li>
+        </ul>
+    </section>
+</nav>
+
+    <script src="scripts/lib/foundation.min.js"></script>
+    <script src="scripts/main.js"></script>
 
 </body>
 </html>
