--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
+<div class="fixed">
 <nav class="top-bar" data-topbar role="navigation">
     <ul class="title-area">
         <li class="name">
@@ -28,7 +29,7 @@
             <li><a href="#references">Referenzen</a></li>
             <li><a href="#contact">Kontakt</a></li>
         </ul>
-        <ul class="right hide-for-large-up">
+        <ul class="right show-for-medium">
             <li class="has-dropdown">
                 <a href="#">Menu</a>
                 <ul class="dropdown">
@@ -45,8 +46,9 @@
         </ul>
     </section>
 </nav>
+</div>
 
-<section id="aboutme">
+<section id="aboutme" class="center">
     <h1>Michael Kohler</h1>
     <img src="profile.png" />
 </section>
@@ -65,7 +67,7 @@
 
 <section id="skills" class="chapter">
     <h1>Skills</h1>
-    <div class="row">
+    <div class="row center">
         <div class="small-2 large-4 columns">Test1</div>
         <div class="small-4 large-4 columns">Test2</div>
         <div class="small-6 large-4 columns">Test3</div>
@@ -81,7 +83,9 @@
 <section id="passion" class="chapter">
     <h1>Freizeit</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur. Donec ut libero sed arcu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut gravida lorem. Ut turpis felis, pulvinar a semper sed, adipiscing id dolor. Pellentesque auctor nisi id magna consequat sagittis. Curabitur dapibus enim sit amet elit pharetra tincidunt feugiat nisl imperdiet. Ut convallis libero in urna ultrices accumsan. Donec sed odio eros. Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a diam lectus. Sed sit amet ipsum mauris. Maecenas congue ligula ac quam viverra nec consectetur ante hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur. Donec ut libero sed arcu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut gravida lorem. Ut turpis felis, pulvinar a semper sed, adipiscing id dolor. Pellentesque auctor nisi id magna consequat sagittis. Curabitur dapibus enim sit amet elit pharetra tincidunt feugiat nisl imperdiet. Ut convallis libero in urna ultrices accumsan. Donec sed odio eros. Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.</p>
+    <div class="center flex-video">
+        <iframe id="mozillavideo" src="https://www.youtube-nocookie.com/embed/LtOGa5M8AuU?controls=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+    </div>
 </section>
 
 <section id="references" class="chapter">
