--- a/app/index.html
+++ b/app/index.html
@@ -6,10 +6,12 @@
     <meta name="description" content="Michael Kohler's CV">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/lib/normalize.css">
     <link rel="stylesheet" href="styles/lib/foundation.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/main.css">
+
 </head>
 <body>
 <div class="fixed">
