round picture + 960 grid

--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,7 @@
     <img src="images/profile.png" alt="Profilbild" />
 </section>
 
+<div id="container">
 <section id="experience" class="chapter">
     <h1>Erfahrung</h1>
     <p>Bereits während des Studiums arbeitete ich 40 - 60%, daher verfüge ich über eine überdurchschnittliche Berufserfahrung im Vergleich zu anderen Studenten. Heute studiere ich berufsbegleitend und kann somit 100% arbeiten, ohne das Studium in den Hintergrund zu stellen.</p>
@@ -251,6 +252,7 @@
     </div>
 
 </section>
+</div>
 
 <footer>
     <div class="center">&copy; Michael Kohler</div>
