--- a/app/index.html
+++ b/app/index.html
@@ -103,7 +103,7 @@
 <section id="skills" class="chapter">
     <h1>Skills</h1>
     <div class="row center">
-        <div class="small-2 large-4 columns">
+        <div class="small-12 medium-6 large-4 columns">
             <h3>Software Entwicklung</h3>
             <label>Projektmitarbeit</label>
             <div class="progress">
@@ -122,7 +122,7 @@
                 <span class="meter" style="width: 70%"></span>
             </div>
         </div>
-        <div class="small-4 large-4 columns">
+        <div class="small-12 medium-6 large-4 columns">
             <h3>Web Entwicklung</h3>
             <label>Einhaltung von Standards</label>
             <div class="progress">
@@ -145,7 +145,7 @@
                 <span class="meter" style="width: 30%"></span>
             </div>
         </div>
-        <div class="small-6 large-4 columns">
+        <div class="small-12 medium-6 large-4 columns">
             <h3>Sprachen</h3>
             <label>Deutsch</label>
             <div class="progress">
