--- a/app/index.html
+++ b/app/index.html
@@ -54,8 +54,10 @@
 </div>
 
 <section id="aboutme" class="center">
-    <h1>Michael Kohler</h1>
-    <img src="images/profile.png" alt="Profilbild" />
+    <div id="logo">
+        <img src="images/MichaelCodes.svg" alt="Logo" />
+    </div>
+    <img id="profilepicture" src="images/profile.png" alt="Profilbild" />
 </section>
 
 <div id="container">
