fix inline nav in footer

--- a/app/index.html
+++ b/app/index.html
@@ -257,7 +257,7 @@
 </div>
 
 <footer>
-    <div class="center">&copy; Michael Kohler</div>
+    <div id="copy" class="center">&copy; Michael Kohler</div>
     <div class="inline-nav center">
         <ul>
             <!-- HTML Imports würde gegen die Duplizierung helfen.. -->
