--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
     </ul>
     <section class="top-bar-section">
         <ul class="right show-for-large-up">
-            <li><a href="#">Home</a></li>
+            <li><a href="#">Startseite</a></li>
             <li><a href="#experience">Erfahrung</a></li>
             <li><a href="#education">Ausbildung</a></li>
             <li><a href="#skills">Skills</a></li>
@@ -37,7 +37,7 @@
             <li class="has-dropdown">
                 <a href="#">Menu</a>
                 <ul class="dropdown">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Startseite</a></li>
                     <li><a href="#experience">Erfahrung</a></li>
                     <li><a href="#education">Ausbildung</a></li>
                     <li><a href="#skills">Skills</a></li>
@@ -161,7 +161,7 @@
             <div class="progress">
                 <span class="meter" style="width: 30%"></span>
             </div>
-            <label>Spanish</label>
+            <label>Spanisch</label>
             <div class="progress">
                 <span class="meter" style="width: 20%"></span>
             </div>
@@ -261,7 +261,7 @@
     <div class="inline-nav center">
         <ul>
             <!-- HTML Imports würde gegen die Duplizierung helfen.. -->
-            <li><a href="#">Home</a></li>
+            <li><a href="#">Startseite</a></li>
             <li><a href="#experience">Erfahrung</a></li>
             <li><a href="#education">Ausbildung</a></li>
             <li><a href="#skills">Skills</a></li>
