mozillaCH slides added

--- a/app/index.html
+++ b/app/index.html
@@ -214,6 +214,7 @@
 <section id="presentations" class="chapter">
     <h1>Präsentationen</h1>
     <ul>
+        <li><a href="../presentations/mozilla-switzerland/index.html">Some information about Mozilla Switzerland</a>, Mozilla Berlin, 20.02.2015</li>
         <li><a href="../presentations/firefoxosappday-frankfurt/index.html">Firefox OS App Day Frankfurt</a>, Frankfurt, 22.11.2014</li>
         <li><a href="../presentations/fx10-zurich/index.html">10 years of Firefox</a>, Zurich, 17.11.2014</li>
         <li><a href="../presentations/hacking-day-berlin-okt-2014/index.html">Introduction - Mozilla Hacking Day Berlin</a>, Berlin, 11.10.2014</li>
