--- a/app/index.html
+++ b/app/index.html
@@ -229,7 +229,7 @@
 <section id="presentations" class="chapter">
     <h1><span data-l10n-id="presentations">Präsentationen</h1>
     <ul>
-        <li><a href="../presentations/mozillach-combining-firefox-os-webmaker/index.html">Hacking on Gaia</a>, MozillaCH, Zürich, 26.03.2015</li>
+        <li><a href="../presentations/mozillach-combining-firefox-os-webmaker/index.html">Combining Firefox OS and Webmaker</a>, MozillaCH, Zürich, 26.03.2015</li>
         <li><a href="http://slides.com/michaelkohler/hacking-on-gaia#/">Hacking on Gaia</a>, FOSS Asia, 15.03.2015</li>
         <li><a href="../presentations/fossasia-combining-firefox-os-webmaker/index.html">Combining Firefox OS and Webmaker</a>, FOSS Asia, 14.03.2015</li>
         <li><a href="../presentations/mozilla-switzerland/index.html">Some information about Mozilla Switzerland</a>, Mozilla Berlin, 20.02.2015</li>
