MobileCamp2015: expanding->advancing

--- a/app/presentations/mozilla-mobilecamp-dresden-2015/index.html
+++ b/app/presentations/mozilla-mobilecamp-dresden-2015/index.html
@@ -3,7 +3,7 @@
 <html lang="en-US" class="fade">
 <head>
   <meta charset="UTF-8">
-  <title>Firefox OS - still expanding</title>
+  <title>Firefox OS - still advancing</title>
   <meta name="viewport" content="width=device-width, user-scalable=yes">
   <link rel="stylesheet" href="themes/mozilla/styles/style.css">
   <style type="text/css">
@@ -26,7 +26,7 @@
 <body class="list">
 
   <header class="caption">
-    <h1>Firefox OS - still expanding</h1>
+    <h1>Firefox OS - still advancing</h1>
     <p class="footer">
       Michael Kohler, 
       <a href="http://twitter.com/KohlerSolutions">@KohlerSolutions</a> or 
@@ -44,7 +44,7 @@
   <div id="cover" class="slide cover w"><div>
     <section>
       <header>
-        <h2>Firefox OS - still expanding</h2>
+        <h2>Firefox OS - still advancing</h2>
       </header>
       <img src="pictures/slides/be-the-future.jpg"
            alt="Mozilla">
