FxA and FxiOS added

--- a/app/presentations/mozilla-mobilecamp-dresden-2015/index.html
+++ b/app/presentations/mozilla-mobilecamp-dresden-2015/index.html
@@ -363,6 +363,28 @@
     </section>
   </div></div>
 
+  <div id="firefoxandroid" class="slide"><div>
+    <section>
+      <header>
+        <h2>Firefox for Android</h2>
+      </header>
+      <img height="50%" src="pictures/slides/android.png" 
+           alt="FxAndroid" 
+           class="middle shadow">
+    </section>
+  </div></div>
+
+  <div id="firefoxios" class="slide"><div>
+    <section>
+      <header>
+        <h2>Firefox for iOS</h2>
+      </header>
+      <img height="60%" src="pictures/slides/ios.png" 
+           alt="FxIOS" 
+           class="middle shadow">
+    </section>
+  </div></div>
+
 <!-- 
 ===================================
 END
