--- a/app/presentations/mozilla-mobilecamp-dresden-2015/index.html
+++ b/app/presentations/mozilla-mobilecamp-dresden-2015/index.html
@@ -310,11 +310,14 @@
     </section>
   </div></div>
 
-  <div id="tvs" class="slide shout"><div>
+  <div id="tvs" class="slide cover"><div>
     <section>
       <header>
-        <h2 style="font-size: 3em;">TV available soon!</h2>
+        <h2>TV already available!</h2>
       </header>
+      <img src="pictures/slides/tv_panasonic.png" 
+           alt="TV Panasonic" 
+           class="middle shadow">
     <footer class="notes">
     </footer>
     </section>
