added android and ios

--- a/app/presentations/mozillaCH-why-should-you-use-firefox/index.html
+++ b/app/presentations/mozillaCH-why-should-you-use-firefox/index.html
@@ -373,6 +373,20 @@ navigator.vibrate([50, 100, 150]);
 
         <slide class="title-slide">
             <hgroup class="flexbox vleft auto-fadein">
+                <h1>Not only Desktop …</h1>
+            </hgroup>
+        </slide>
+
+        <slide class="segue blue">
+            <img src="imgs/android.png" width="1100" style="position: absolute; top: 0; left: 0;">
+        </slide>
+        
+        <slide class="segue blue">
+            <img src="imgs/ios.png" width="1100" style="position: absolute; top: 0; left: 0;">
+        </slide>
+
+        <slide class="title-slide">
+            <hgroup class="flexbox vleft auto-fadein">
                 <h1>DevTools …</h1>
             </hgroup>
         </slide>
