--- a/app/presentations/mozillaCH-why-should-you-use-firefox/index.html
+++ b/app/presentations/mozillaCH-why-should-you-use-firefox/index.html
@@ -215,7 +215,7 @@
 
         <slide>
             <hgroup>
-                <h2>In-content windows</h2>
+                <h2>Moved windows to in-content</h2>
             </hgroup>
             <article>
               <img src="imgs/incontent.png" />
@@ -300,19 +300,19 @@ navigator.vibrate([50, 100, 150]);
             </hgroup>
         </slide>
 
-        <slide class="title-slide">
+        <slide class="title-slide blue">
             <img src="imgs/addons.png" width="1100" style="position: absolute; top: 0; left: 0;">
         </slide>
 
-        <slide class="title-slide">
+        <slide class="title-slide blue">
             <img src="imgs/themes.png" width="1100" style="position: absolute; top: 0; left: 0;">
         </slide>
 
-        <slide class="title-slide">
+        <slide class="title-slide blue">
             <img src="imgs/styles1.png" width="1100" style="position: absolute; top: 0; left: 0;">
         </slide>
 
-        <slide class="title-slide">
+        <slide class="title-slide blue">
             <img src="imgs/styles2.png" width="1100" style="position: absolute; top: 0; left: 0;">
         </slide>
 
@@ -380,7 +380,7 @@ navigator.vibrate([50, 100, 150]);
         <slide class="segue blue">
             <img src="imgs/android.png" width="1100" style="position: absolute; top: 0; left: 0;">
         </slide>
-        
+
         <slide class="segue blue">
             <img src="imgs/ios.png" width="1100" style="position: absolute; top: 0; left: 0;">
         </slide>
