--- a/app/presentations/mozillaCH-why-should-you-use-firefox/index.html
+++ b/app/presentations/mozillaCH-why-should-you-use-firefox/index.html
@@ -64,7 +64,7 @@
         </slide>
 
         <slide class="segue blue">
-            <img src="imgs/independent.png" width="1100" style="position: absolute; top: 0; left: 0;">
+            <img src="imgs/independent.png" style="position: absolute; top: 0; left: 0;">
         </slide>
 
         <slide>
@@ -145,7 +145,7 @@
         </slide>
 
         <slide class="segue blue">
-            <img src="imgs/lightbeam.png" width="1100" style="position: absolute; top: 0; left: 0;">
+            <img src="imgs/lightbeam.png" style="position: absolute; top: 0; left: 0;">
         </slide>
 
         <slide class="title-slide">
@@ -301,19 +301,19 @@ navigator.vibrate([50, 100, 150]);
         </slide>
 
         <slide class="title-slide blue">
-            <img src="imgs/addons.png" width="1100" style="position: absolute; top: 0; left: 0;">
+            <img src="imgs/addons.png" style="position: absolute; top: 0; left: 0;">
         </slide>
 
         <slide class="title-slide blue">
-            <img src="imgs/themes.png" width="1100" style="position: absolute; top: 0; left: 0;">
+            <img src="imgs/themes.png" style="position: absolute; top: 0; left: 0;">
         </slide>
 
         <slide class="title-slide blue">
-            <img src="imgs/styles1.png" width="1100" style="position: absolute; top: 0; left: 0;">
+            <img src="imgs/styles1.png" style="position: absolute; top: 0; left: 0;">
         </slide>
 
         <slide class="title-slide blue">
-            <img src="imgs/styles2.png" width="1100" style="position: absolute; top: 0; left: 0;">
+            <img src="imgs/styles2.png" style="position: absolute; top: 0; left: 0;">
         </slide>
 
         <slide>
@@ -348,7 +348,7 @@ navigator.vibrate([50, 100, 150]);
         </slide>
 
         <slide class="segue blue">
-            <img src="imgs/marketplace.png" width="1100" style="position: absolute; top: 0; left: 0;">
+            <img src="imgs/marketplace.png" style="position: absolute; top: 0; left: 0;">
         </slide>
 
         <slide class="title-slide">
@@ -392,7 +392,7 @@ navigator.vibrate([50, 100, 150]);
         </slide>
 
         <slide class="segue blue">
-            <img src="imgs/devtools.png" width="1100" style="position: absolute; top: 0; left: 0;">
+            <img src="imgs/devtools.png" style="position: absolute; top: 0; left: 0;">
         </slide>
 
         <slide class="title-slide">
