add points to 'Why should you use Firefox?'

--- a/app/presentations/mozillaCH-why-should-you-use-firefox/index.html
+++ b/app/presentations/mozillaCH-why-should-you-use-firefox/index.html
@@ -179,10 +179,20 @@
 
         <slide>
             <hgroup>
-                <h2>Development</h2>
+                <h2>Non-business driven development</h2>
             </hgroup>
             <article>
                 <p>Careful consideration of new features -> what actually does benefit the user?</p>
+                <p>Romansh: no other browser has a localization, but Firefox does!</p>
+                <p>Search engines: whatever works best in the specific country (for example Yandex in Russia)</p>
+            </article>
+        </slide>
+
+        <slide>
+            <hgroup>
+                <h2>Non-business driven development</h2>
+            </hgroup>
+            <article>
                 <p>Many companies to build on Mozilla source code: TOR for example</p>
                 <p>Not all of them might reflect everything from the Mozilla Manifesto</p>
                 <p>But that's what Open Source is! (and that's a good thing!)</p>
