Changes to CH talk

--- a/app/presentations/mozillaCH-why-should-you-use-firefox/index.html
+++ b/app/presentations/mozillaCH-why-should-you-use-firefox/index.html
@@ -44,9 +44,26 @@
             </hgroup>
         </slide>
 
+        <slide class="segue blue">
+          <hgroup>
+              <h2>About me - Michael Kohler</h2>
+          </hgroup>
+          <article>
+            <ul>
+              <li>Volunteering for Mozilla since 2008</li>
+              <li>Mozilla Rep</li>
+              <li>Co-coordinator Mozilla Switzerland</li>
+              <li>Co-coordinator Mozilla German-speaking community</li>
+              <li>Web Developer @ netcase.ch</li>
+              <li>mkohler.codes</li>
+            </ul>
+          </article>
+        </slide>
+
         <slide class="title-slide">
             <hgroup class="flexbox vleft auto-fadein">
-                <h1>Firefox is a recognized brand …</h1>
+                <h1>Firefox is a trusted brand …</h1>
+                <img class="slideside" src="imgs/trust.jpg" />
             </hgroup>
         </slide>
 
@@ -55,12 +72,13 @@
                 <h2>Firefox</h2>
             </hgroup>
             <article>
-                <p>Firefox is a trusted brand, and that should be the case for the future</p>
+                <p>Firefox is a trusted brand</p>
                 <p>Mozilla is non-profit</p>
                 <p>The Mozilla Corporation is owned by the Foundation</p>
                 <p>Firefox is the independent choice!</p>
                 <p>Stakeholders are the users</p>
             </article>
+            <img src="imgs/answers.jpg" class="slideside" />
         </slide>
 
         <slide class="segue blue">
@@ -102,6 +120,7 @@
         <slide class="title-slide">
             <hgroup class="flexbox vleft auto-fadein">
                 <h1>Mozilla Switzerland …</h1>
+                <img src="imgs/volunteers.jpg" class="slideside" />
             </hgroup>
         </slide>
 
@@ -111,7 +130,8 @@
             </hgroup>
             <article>
                 <p style="font-size: 2em;">@MozillaCH on Twitter</p>
-                <p>Regular meetups in Zurich, soon also in Bern</p>
+                <p>Regular meetups in Zurich</p>
+                <p>Open Web Meetup Group in Bern (just started)</p>
                 <p>We're looking for you!</p>
             </article>
         </slide>
@@ -141,6 +161,7 @@
             </hgroup>
             <article>
               <img src="imgs/forget.png" />
+              <img src="imgs/forget.jpg" class="slideside" />
             </article>
         </slide>
 
@@ -207,6 +228,15 @@
 
         <slide>
             <hgroup>
+                <h2>Search Panel</h2>
+            </hgroup>
+            <article>
+              <img src="imgs/search.png" />
+            </article>
+        </slide>
+
+        <slide>
+            <hgroup>
                 <h2>Firefox Hello</h2>
             </hgroup>
             <article>
@@ -216,7 +246,7 @@
 
         <slide>
             <hgroup>
-                <h2>Reader List</h2>
+                <h2>Reader View</h2>
             </hgroup>
             <article>
               <img src="imgs/reader.png" />
@@ -229,24 +259,6 @@
             </hgroup>
             <article>
               <img src="imgs/incontent.png" />
-            </article>
-        </slide>
-
-        <slide>
-            <hgroup>
-                <h2>Responsive Images</h2>
-            </hgroup>
-            <article>
-              <p>&lt;picture&gt; tag etc.
-            </article>
-        </slide>
-
-        <slide>
-            <hgroup>
-                <h2>Ruby HTML5 Tag</h2>
-            </hgroup>
-            <article>
-              <img src="imgs/ruby.png" />
             </article>
         </slide>
 
@@ -307,6 +319,7 @@ navigator.vibrate([50, 100, 150]);
         <slide class="title-slide">
             <hgroup class="flexbox vleft auto-fadein">
                 <h1>Customize it without fear …</h1>
+                <img class="slideside" src="imgs/customize.jpg" />
             </hgroup>
         </slide>
 
@@ -363,6 +376,20 @@ navigator.vibrate([50, 100, 150]);
 
         <slide class="title-slide">
             <hgroup class="flexbox vleft auto-fadein">
+                <h1>Not only Desktop …</h1>
+            </hgroup>
+        </slide>
+
+        <slide class="segue blue">
+            <img src="imgs/android.png" width="1100" style="position: absolute; top: 0; left: 0;">
+        </slide>
+
+        <slide class="segue blue">
+            <img src="imgs/ios.png" width="1100" style="position: absolute; top: 0; left: 0;">
+        </slide>
+
+        <slide class="title-slide">
+            <hgroup class="flexbox vleft auto-fadein">
                 <h1>How can I contribute?</h1>
             </hgroup>
         </slide>
@@ -378,21 +405,28 @@ navigator.vibrate([50, 100, 150]);
               <p>Code</p>
               <p>Design / UX</p>
               <p>Addons</p>
+              <p>Localization..</p>
+              <p>Marketing</p>
+              <p>...</p>
             </article>
         </slide>
 
-        <slide class="title-slide">
-            <hgroup class="flexbox vleft auto-fadein">
-                <h1>Not only Desktop …</h1>
+        <slide>
+            <hgroup>
+                <h2>friends.mozilla.org</h2>
             </hgroup>
+            <article>
+              <img src="imgs/friends.png" />
+            </article>
         </slide>
 
-        <slide class="segue blue">
-            <img src="imgs/android.png" width="1100" style="position: absolute; top: 0; left: 0;">
-        </slide>
-
-        <slide class="segue blue">
-            <img src="imgs/ios.png" width="1100" style="position: absolute; top: 0; left: 0;">
+        <slide>
+            <hgroup>
+                <h2>foxyeah.com</h2>
+            </hgroup>
+            <article>
+              <img src="imgs/foxyeah.png" width="90%" />
+            </article>
         </slide>
 
         <slide class="title-slide">
