add privacy video

--- a/app/presentations/mozillaCH-how-mozilla-protect-web/index.html
+++ b/app/presentations/mozillaCH-how-mozilla-protect-web/index.html
@@ -143,6 +143,15 @@
                 <h1>Privacy …</h1>
             </hgroup>
         </slide>
+        
+        <slide>
+          <hgroup>
+              <h2>Privacy</h2>
+          </hgroup>
+          <article>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/7gi46YO1o_Y" frameborder="0" allowfullscreen></iframe>
+          </article>
+        </slide>
 
         <slide>
             <hgroup>
