about mozilla added to Berlin intro talk

--- a/app/presentations/mozweekend-berlin-2015-intro/index.html
+++ b/app/presentations/mozweekend-berlin-2015-intro/index.html
@@ -104,6 +104,79 @@ URL: https://code.google.com/p/io-2012-slides
     </article>
   </slide>
   
+  <slide class="red colored-slide">
+    <article class="flexbox vcenter">
+      <h1>About Mozilla..</h1>
+    </article>
+  </slide>
+  
+  <slide class="red colored-slide">
+    <article class="flexbox vcenter">
+      <h1>Non-profit</h1>
+      <h2>to keep the web open and accessible</h2>
+    </article>
+  </slide>
+  
+  <slide class="manifest-1 colored-slide">
+    <article class="flexbox vcenter">
+      <p>The Internet is an integral part of modern life—a key component in education, communication, collaboration, business, entertainment and society as a whole.</p>
+    </article>
+  </slide>
+  
+  <slide class="manifest-2 colored-slide">
+    <article class="flexbox vcenter">
+      <p>The Internet is a global public resource that must remain open and accessible.</p>
+    </article>
+  </slide>
+  
+  <slide class="manifest-3 colored-slide">
+    <article class="flexbox vcenter">
+      <p>The Internet must enrich the lives of individual human beings.</p>
+    </article>
+  </slide>
+  
+  <slide class="manifest-4 colored-slide">
+    <article class="flexbox vcenter">
+      <p>Individuals’ security and privacy on the Internet are fundamental and must not be treated as optional.</p>
+    </article>
+  </slide>
+  
+  <slide class="manifest-5 colored-slide">
+    <article class="flexbox vcenter">
+      <p>Individuals must have the ability to shape the Internet and their own experiences on it.</p>
+    </article>
+  </slide>
+  
+  <slide class="manifest-6 colored-slide">
+    <article class="flexbox vcenter">
+      <p>The effectiveness of the Internet as a public resource depends upon interoperability (protocols, data formats, content), innovation and decentralized participation worldwide.</p>
+    </article>
+  </slide>
+  
+  <slide class="manifest-7 colored-slide">
+    <article class="flexbox vcenter">
+      <p>Free and open source software promotes the development of the Internet as a public resource.</p>
+    </article>
+  </slide>
+  
+  <slide class="manifest-8 colored-slide">
+    <article class="flexbox vcenter">
+      <p>Transparent community-based processes promote participation, accountability and trust.</p>
+    </article>
+  </slide>
+  
+  <slide class="manifest-9 colored-slide">
+    <article class="flexbox vcenter">
+      <p>Commercial involvement in the development of the Internet brings many benefits; a balance between commercial profit and public benefit is critical.</p>
+    </article>
+  </slide>
+  
+  <slide class="manifest-10 colored-slide">
+    <article class="flexbox vcenter">
+      <p>Magnifying the public benefit aspects of the Internet is an important goal, worthy of time, attention and commitment.</p>
+    </article>
+  </slide>
+  
   <slide class="title-slide segue charcoal">
     <aside class="gdbar">
       <h1>Thank you!</h1>
