--- a/app/index.html
+++ b/app/index.html
@@ -229,7 +229,8 @@
 <section id="presentations" class="chapter">
     <h1><span data-l10n-id="presentations">Präsentationen</h1>
     <ul>
-      <li><a href="../presentations/mozweekend-berlin-2015-new-in-firefox/index.html">Mozilla Weekend Berlin 2015 - What's new in Firefox?</a>, German-speaking Mozilla Community, Berlin, Germany, 11.07.2015</li>
+      <li><a href="../presentations/mozweekend-berlin-2015-contributing/index.html">Mozilla Weekend Berlin 2015 - Contributing at Mozilla</a>, German-speaking Mozilla Community, Berlin, 11.07.2015</li>
+      <li><a href="../presentations/mozweekend-berlin-2015-new-in-firefox/index.html">Mozilla Weekend Berlin 2015 - What's new in Firefox?</a>, German-speaking Mozilla Community, Berlin, 11.07.2015</li>
       <li><a href="../presentations/mozweekend-berlin-2015-outro/index.html">Mozilla Weekend Berlin 2015 - Outro Day 1</a>, German-speaking Mozilla Community, Berlin, Germany, 11.07.2015</li>
       <li><a href="../presentations/mozweekend-berlin-2015-intro/index.html">Mozilla Weekend Berlin 2015 - Intro</a>, German-speaking Mozilla Community, Berlin, Germany, 11.07.2015</li>
         <li><a href="../presentations/mozillaCH-how-mozilla-protect-web/index.html">How does Mozilla protect the open web?</a>, Mozilla Switzerland, Bern, Switzerland, 08.06.2015</li>
