--- a/app/presentations/mozweekend-berlin-2015-intro/index.html
+++ b/app/presentations/mozweekend-berlin-2015-intro/index.html
@@ -87,7 +87,7 @@ URL: https://code.google.com/p/io-2012-slides
   
   <slide class="charcoal colored-slide">
     <article class="flexbox vcenter">
-      <h1>#MozWknd2015</h1>
+      <h1>#mozweekend</h1>
     </article>
   </slide>
   
