--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
     <div id="logo">
         <img src="images/MichaelCodes.svg" alt="Logo" />
     </div>
-    <img id="profilepicture" src="images/profile.png" alt="Profilbild" />
+    <img id="profilepicture" src="images/profile.jpg" alt="Profilbild" />
 </section>
 
 <div id="container" class="chapter">
