--- a/app/index.html
+++ b/app/index.html
@@ -75,8 +75,12 @@
     <h1><span data-l10n-id="experience">Erfahrung</span></h1>
     <p><span data-l10n-id="experience-start">Bereits während des Studiums arbeitete ich 40 - 60%, daher verfüge ich über eine überdurchschnittliche Berufserfahrung im Vergleich zu anderen Studenten. Heute studiere ich berufsbegleitend und kann somit 100% arbeiten, ohne das Studium in den Hintergrund zu stellen.</span></p>
     <table>
+       <tr>
+            <td><span data-l10n-id="experience-0-title">April 2015 - heute</span></td>
+            <td><strong><span data-l10n-id="experience-0-company">NETCASE GmbH</span></strong><br /><span data-l10n-id="experience-0-desc">Web-Entwickler - NodeJS, JavaScript</span></td>
+        </tr>
         <tr>
-            <td><span data-l10n-id="experience-1-title">Oktober 2014 - heute</span></td>
+            <td><span data-l10n-id="experience-1-title">Oktober 2014 - February 2015</span></td>
             <td><strong><span data-l10n-id="experience-1-company">Swisscom AG</span></strong><br /><span data-l10n-id="experience-1-desc">Applikationsentwickler - Document Management - Templating, Requirement Engineering, 2nd Level Support</span></td>
         </tr>
         <tr>
