--- a/app/presentations/mozillaCH-day-whats-new-in-mozilla/index.html
+++ b/app/presentations/mozillaCH-day-whats-new-in-mozilla/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Michael Kohler">
     <meta name="publisher" content="Michael Kohler">
     <meta name="copyright" content="Michael Kohler (content), Mozilla (the fox), Google (slides coding)">
-    <meta name="description" content="Firefox is the independent choice. We'll explain why you should use Firefox.">
+    <meta name="description" content="">
     <meta name="page-topic" content="education">
     <meta name="page-type" content="slide">
     <meta name="audience" content="all">
@@ -51,8 +51,8 @@
             <ul>
               <li>Volunteering for Mozilla since 2008</li>
               <li>Mozilla Rep</li>
-              <li>Co-coordinator Mozilla Switzerland</li>
-              <li>Co-coordinator Mozilla German-speaking community</li>
+              <li>Leader Mozilla Switzerland</li>
+              <li>Leader Mozilla German-speaking community</li>
               <li>Web Developer @ netcase.ch</li>
               <li>mkohler.codes</li>
             </ul>
@@ -82,13 +82,13 @@
 
         <slide class="title-slide blue">
             <hgroup class="flexbox vleft auto-fadein">
-                <h1>It's Open Source …</h1>
+                <h1>It's Open …</h1>
             </hgroup>
         </slide>
 
         <slide class="blue">
             <hgroup>
-                <h2>Open Source</h2>
+                <h2>Open Source and open for contributions</h2>
             </hgroup>
             <article>
                 <p>Mozilla and its products is not only the "Mozilla Corporation"</p>
@@ -96,11 +96,13 @@
                 <p>You'll find Mozilla volunteers in every country</p>
                 <p>Get in contact with them if you need any information</p>
             </article>
+            <img class="slideside" src="imgs/volunteers.jpg" />
         </slide>
 
         <slide class="title-slide blue">
             <hgroup class="flexbox vleft auto-fadein">
-                <h1>Mozilla Switzerland<br /><br />>> mozilla.ch</h1>
+                <h1>Mozilla Switzerland</h1>
+                <h2>mozilla.ch</h2>
             </hgroup>
         </slide>
 
@@ -113,6 +115,7 @@
         <slide class="title-slide blue">
             <hgroup class="flexbox vleft auto-fadein">
                 <h1>Firefox</h1>
+                <img class="slideside" src="imgs/firefox_logo.png">
             </hgroup>
         </slide>
 
@@ -130,44 +133,286 @@
             </hgroup>
         </slide>
 
-
-
         <slide class="title-slide blue">
             <hgroup class="flexbox vleft auto-fadein">
-                <h1>Firefox for Android</h1>
+                <h1>Firefox is the<br /> independent choice!</h1>
+                <img class="slideside" src="imgs/answers.jpg" />
             </hgroup>
         </slide>
 
+        <slide class="blue center-image-slide">
+            <hgroup>
+                <h2>Firefox Accounts</h2>
+            </hgroup>
+            <img class="center-image" src="imgs/accounts.png" />
+        </slide>
+
+        <slide class="blue">
+            <hgroup>
+                <h2>Windows 10 Support</h2>
+            </hgroup>
+            <article>
+                <p>API for Standard Browser Setting</p>
+                <p>Updated look and feel to match Windows 10</p>
+            </article>
+        </slide>
+
+        <slide class="blue">
+            <hgroup>
+                <h2>Instant Messaging with Firefox Hello</h2>
+            </hgroup>
+        </slide>
+
+        <slide class="blue">
+            <hgroup>
+                <h2>Support for SVG Favicons</h2>
+            </hgroup>
+        </slide>
+
+        <slide class="blue center-image-slide">
+            <hgroup>
+                <h2>Improvements to the Dev Tools</h2>
+            </hgroup>
+            <article>
+                <img class="center-image" src="imgs/devtools.png" />
+            </article>
+        </slide>
+
+        <slide class="blue">
+            <hgroup>
+                <h2>JavaScript</h2>
+            </hgroup>
+            <article>
+              <p>Navigator.onLine reports real status</p>
+              <p>document.execCommand(aCommandName, aShowDefaultUI, aValueArgument) with copy/paste</p>
+            </article>
+        </slide>
+
+        <slide class="blue center-image-slide">
+            <hgroup>
+                <h2>Upcoming in Firefox Beta - Tracking Protection</h2>
+            </hgroup>
+            <img class="center-image" src="imgs/tp.png">
+        </slide>
+
+        <slide class="blue center-image-slide">
+            <hgroup>
+                <h2>Upcoming in Firefox Beta - Tracking Protection</h2>
+            </hgroup>
+            <img class="center-image smaller-image" src="imgs/tp2.png">
+        </slide>
+
+        <slide class="blue center-image-slide">
+            <hgroup>
+                <h2>Upcoming in Firefox Beta - Control Center</h2>
+            </hgroup>
+            <img class="center-image" src="imgs/cc.png">
+        </slide>
+
+        <slide class="title-slide blue">
+            <hgroup class="flexbox vleft auto-fadein">
+                <h1>Firefox<br />for Android</h1>
+                <img class="slideside" src="imgs/firefox_logo.png">
+            </hgroup>
+        </slide>
+
+        <slide class="blue center-image-slide">
+            <hgroup>
+                <h2>Upcoming in Firefox for Android - Remote Debugging</h2>
+            </hgroup>
+            <img class="center-image smaller-image" src="imgs/remotedebug1.png">
+        </slide>
+
+        <slide class="blue center-image-slide">
+            <hgroup>
+                <h2>Upcoming in Firefox for Android - Remote Debugging</h2>
+            </hgroup>
+            <img class="center-image smaller-image" src="imgs/remotedebug2.png">
+        </slide>
+
+        <slide class="blue center-image-slide">
+            <hgroup>
+                <h2>Upcoming in Firefox for Android - Remote Debugging</h2>
+            </hgroup>
+            <img class="center-image smaller-image" src="imgs/remotedebug3.png">
+        </slide>
+
+        <slide class="blue">
+            <hgroup>
+                <h2>Upcoming in Firefox for Android</h2>
+            </hgroup>
+            <article>
+              <p>Only load picture on demand</p>
+              <p>Open Tabs in Background (no need to leave external app)</p>
+              <p>Restricted Profiles -> more control</p>
+            </article>
+        </slide>
+
+        <slide class="title-slide blue">
+            <hgroup class="flexbox vleft auto-fadein">
+                <h1>There are nightly builds!</h1>
+                <h2>nightly.mozilla.org</h2>
+            </hgroup>
+        </slide>
 
         <slide class="title-slide blue">
             <hgroup class="flexbox vleft auto-fadein">
                 <h1>Firefox for iOS</h1>
+                <img class="slideside" src="imgs/ios.png">
             </hgroup>
         </slide>
 
+        <slide class="blue">
+            <hgroup>
+                <h2>Availability</h2>
+            </hgroup>
+            <article>
+              <p>Australia</p>
+              <p>Austria</p>
+              <p>Canada</p>
+              <p>New Zealand</p>
+              <p>other countries coming soon!</p>
+            </article>
+        </slide>
+
+        <slide class="blue">
+            <hgroup>
+                <h2>Features</h2>
+            </hgroup>
+            <article>
+              <p>Reader Mode</p>
+              <p>Sync History</p>
+              <p>Sync Open Tabs</p>
+              <p>No bookmark sync for now..</p>
+              <p>but it's a browser!</p>
+            </article>
+        </slide>
 
         <slide class="title-slide blue">
             <hgroup class="flexbox vleft auto-fadein">
                 <h1>Firefox OS</h1>
+                <img class="slideside" src="imgs/fox.png">
             </hgroup>
         </slide>
 
+        <slide class="blue">
+            <hgroup>
+                <h2>New focus</h2>
+            </hgroup>
+            <article>
+              <p>More focus on high-end devices</p>
+              <p>TVs</p>
+              <p>Internet of Things</p>
+              <p>Feature phones (reeeeeally basic)</p>
+            </article>
+        </slide>
+
+        <slide class="blue center-image-slide">
+            <hgroup>
+                <h2>TVs</h2>
+            </hgroup>
+            <img class="center-image smaller-image" src="imgs/tv.png">
+        </slide>
+
+        <slide class="blue center-image-slide">
+            <hgroup>
+                <h2>TVs</h2>
+            </hgroup>
+            <img class="center-image smaller-image" src="imgs/tv_panasonic.png">
+        </slide>
+
+        <slide class="blue center-image-slide">
+            <hgroup>
+                <h2>b2gdroid</h2>
+            </hgroup>
+            <img class="center-image smaller-image" src="imgs/droid.png">
+        </slide>
+
+        <slide class="blue center-image-slide">
+            <hgroup>
+                <h2>Sony Devices</h2>
+            </hgroup>
+            <img class="center-image smaller-image" src="imgs/sonydevices.png">
+        </slide>
+
+        <slide class="blue center-image-slide">
+            <hgroup>
+                <h2>Firefox OS 2.5 - Upcoming Private Browsing / TP</h2>
+            </hgroup>
+            <img class="center-image smaller-image" src="imgs/ffpb.png">
+        </slide>
+
+        <slide class="blue center-image-slide">
+            <hgroup>
+                <h2>Firefox OS 2.5 - Upcoming Addons</h2>
+                <img class="center-image smaller-image" src="imgs/ffosaddons.png">
+            </hgroup>
+        </slide>
+
+        <slide class="blue center-image-slide">
+            <hgroup>
+                <h2>Firefox OS 2.5 - Upcoming Pin the Web</h2>
+            </hgroup>
+            <img class="center-image smaller-image" src="imgs/ffospin.png">
+        </slide>
+
+        <slide class="blue center-image-slide">
+            <hgroup>
+                <h2>Firefox OS 2.5 - Upcoming Speech Recognition</h2>
+            </hgroup>
+            <img class="center-image smaller-image" src="imgs/ffosvaani.png">
+        </slide>
 
         <slide class="title-slide blue">
             <hgroup class="flexbox vleft auto-fadein">
                 <h1>Webmaker</h1>
+                <img class="slideside" src="imgs/webmaker-icon.svg">
             </hgroup>
         </slide>
 
+        <slide class="blue">
+            <hgroup>
+                <h2>Webmaker Update</h2>
+            </hgroup>
+            <article>
+              <p>Popcorn Maker - looking for other maintainer</p>
+              <p>Appmaker - not supported anymore</p>
+            </article>
+        </slide>
+
+        <slide class="blue center-image-slide">
+            <hgroup>
+                <h2>New Thimble</h2>
+            </hgroup>
+            <img class="center-image smaller-image" src="imgs/thimble.png">
+        </slide>
+
+        <slide class="blue center-image-slide">
+            <hgroup>
+                <h2>Webmaker for Android</h2>
+            </hgroup>
+            <img class="center-image smaller-image" src="imgs/webmaker-android.png">
+        </slide>
 
         <slide class="title-slide blue">
             <hgroup class="flexbox vleft auto-fadein">
-                <h1>Privacy / Advocacy …</h1>
+                <h1>Privacy / Policy / Advocacy</h1>
             </hgroup>
         </slide>
 
+        <slide class="blue center-image-slide">
+            <hgroup>
+                <h2>Data Retention - Germany</h2>
+            </hgroup>
+            <img class="center-image smaller-image" src="imgs/dataretention.png">
+        </slide>
 
-
+        <slide class="title-slide blue">
+            <hgroup class="flexbox vleft auto-fadein">
+                <h1>Participation</h1>
+                <img class="slideside" src="imgs/participation.png">
+            </hgroup>
+        </slide>
 
         <slide class="title-slide blue">
             <hgroup class="flexbox vleft auto-fadein">
@@ -182,8 +427,9 @@
             <article>
               <p>Promote Mozilla's mission</p>
               <p>Ideas</p>
-              <p><strong>File bugs</strong> at bugzilla.mozilla.org if you encounter anything that might be a bug</p>
+              <p><strong>File bugs</strong> at bugzilla.mozilla.org if you encounter anything that might be a bug or for features</p>
               <p>Code</p>
+              <p>Testing (QA)</p>
               <p>Design / UX</p>
               <p>Localization</p>
               <p>Marketing</p>
@@ -211,6 +457,9 @@
                 <br>
                 <span>Reps</span>
                 <a href="https://reps.mozilla.org/u/michaelkohler/">reps.mozilla.org/u/michaelkohler/</a>
+                <br>
+                <span>MozillaCH</span>
+                <a href="http://www.mozilla.ch">mozilla.ch</a>
                 <br>
                 <span>MozillaCH</span>
                 <a href="http://www.twitter.com/MozillaCH">twitter.com/MozillaCH</a>
