MozillaCHDay2015: slide changes

--- a/app/presentations/mozillaCH-day-whats-new-in-mozilla/index.html
+++ b/app/presentations/mozillaCH-day-whats-new-in-mozilla/index.html
@@ -94,7 +94,6 @@
                 <p>Mozilla and its products is not only the "Mozilla Corporation"</p>
                 <p>Thousands of volunteers!</p>
                 <p>You'll find Mozilla volunteers in every country</p>
-                <p>Get in contact with them if you need any information</p>
             </article>
             <img class="slideside" src="imgs/volunteers.jpg" />
         </slide>
@@ -133,13 +132,6 @@
             </hgroup>
         </slide>
 
-        <slide class="title-slide blue">
-            <hgroup class="flexbox vleft auto-fadein">
-                <h1>Firefox is the<br /> independent choice!</h1>
-                <img class="slideside" src="imgs/answers.jpg" />
-            </hgroup>
-        </slide>
-
         <slide class="blue center-image-slide">
             <hgroup>
                 <h2>Firefox Accounts</h2>
@@ -157,16 +149,13 @@
             </article>
         </slide>
 
-        <slide class="blue">
+        <slide class="blue center-image-slide">
             <hgroup>
                 <h2>Instant Messaging with Firefox Hello</h2>
             </hgroup>
-        </slide>
-
-        <slide class="blue">
-            <hgroup>
-                <h2>Support for SVG Favicons</h2>
-            </hgroup>
+            <article>
+                <img class="center-image" src="imgs/hello.png" />
+            </article>
         </slide>
 
         <slide class="blue center-image-slide">
