Add FriSoftwareDays slides

--- a/app/index.html
+++ b/app/index.html
@@ -234,6 +234,7 @@
     <h1><span data-l10n-id="presentations">Präsentationen</h1>
       <ul>
     <ul>
+      <li><a href="https://docs.google.com/presentation/d/1T8PbAqkCepClJz3OkTpKkrs01TVCTYW1K1hzT0ImC6s/edit?usp=sharing">Firefox OS and Connected Devices</a>, Mozilla Switzerland, Fribourg, 01.02.2016</li>
       <li><a href="../presentations/mozillaCH-mozilla-intro-firefox-os/index.html">WebMardi Lausanne 2015 - Intro to Mozilla / Firefox OS</a>, Mozilla Switzerland, Lausanne, 10.11.2015</li>
       <li><a href="../presentations/mozillaCH-day-devtools-demo/index.html">Mozilla Day Switzerland 2015 - Firefox Dev Tools Demo</a>, Mozilla Switzerland, Zurich, 17.10.2015</li>
       <li><a href="../presentations/mozillaCH-day-whats-new-in-mozilla/index.html">Mozilla Day Switzerland 2015 - What's new in Mozilla?</a>, Mozilla Switzerland, Zurich, 17.10.2015</li>
