Fix contact styling

--- a/app/index.html
+++ b/app/index.html
@@ -277,11 +277,10 @@
 <section id="contact" class="chapter">
     <h1><span data-l10n-id="contact">Kontakt</span></h1>
     <div class="center icons">
-        <a href="mailto:mkohler@picobudget.com"><i class="fa fa-envelope-o">Mail</i></a>
-        <a href="https://www.twitter.com/KohlerSolutions"><i class="fa fa-twitter">Twitter</i></a>
-        <a href="https://www.xing.com/profile/Michael_Kohler36"><i class="fa fa-xing">Xing</i></a>
+        <a href="mailto:mkohler@picobudget.com"><i class="fa fa-envelope-o"></i></a>
+        <a href="https://www.twitter.com/KohlerSolutions"><i class="fa fa-twitter"></i></a>
+        <a href="https://www.xing.com/profile/Michael_Kohler36"><i class="fa fa-xing"></i></a>
     </div>
-
 </section>
 </div>
 
